# pipelanes

./: CMakeLists.txt  readme.md
include/pipelanes/: from.h  lane_indices.h  overload_set.h  tuple_utils.h  type_fail.h
include/pipelanes/adaptors/: adaptor_closure.h  bind.h  flatten.h  fmap.h  format_tuple.h  gather.h  lens_view.h  lensed_filter.h  print_elements.h  select.h  transform.h
include/pipelanes/adaptors/lens_view/: proxy_range.h
include/pipelanes/algebraic_types/: algebraic_traits.h  functor.h  monad.h
include/pipelanes/operators/: bind.h  compose.h  custom_combinator.h  fmap.h  range_extractor.h
tests/: main.cpp  test_helpers.h
